--- a/index.HTML
+++ b/index.HTML
@@ -12,9 +12,7 @@
       50%  { filter: drop-shadow(0 0 8px rgba(34,197,94,0.9)); }
       100% { filter: drop-shadow(0 0 2px rgba(34,197,94,0.5)); }
     }
-    .neon-glow {
-      animation: neonPulse 2s infinite;
-    }
+    .neon-glow { animation: neonPulse 2s infinite; }
     .cyber-border {
       border: 1px solid rgba(34,197,94,0.3);
       background: linear-gradient(145deg, rgba(20,20,20,0.9), rgba(40,40,40,0.9));
@@ -24,19 +22,13 @@
       transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
       transform: translateX(-100%);
     }
-    .sidebar.visible {
-      transform: translateX(0);
-    }
-    @media (min-width: 1024px) {
-      .sidebar {
-        transform: translateX(0);
-      }
-    }
+    .sidebar.visible { transform: translateX(0); }
+    @media (min-width: 1024px) { .sidebar { transform: translateX(0); } }
   </style>
 </head>
 <body class="bg-[#0a0a0a] text-white min-h-screen font-sans overflow-x-hidden">
 
-  <!-- Sidebar -->
+  <!-- Sidebar de Registrar Partida -->
   <div class="sidebar fixed left-0 top-0 h-screen w-80 bg-[#0d0d0d] cyber-border z-50 shadow-2xl">
     <div class="p-6">
       <button onclick="toggleSidebar()" class="lg:hidden absolute right-4 top-4 text-gray-400 hover:text-white">✕</button>
@@ -44,44 +36,36 @@
       <form id="formPartida" class="space-y-4">
         <div>
           <label class="block text-sm text-emerald-300 mb-2">Time Vencedor</label>
-          <div class="space-y-2">
-            <select id="vencedor1" required class="w-full p-2 rounded-lg bg-black/30 border border-emerald-500/30 focus:border-emerald-500 appearance-none">
-              <option value="">Selecione um jogador</option>
-            </select>
-            <select id="vencedor2" required class="w-full p-2 rounded-lg bg-black/30 border border-emerald-500/30 focus:border-emerald-500 appearance-none">
-              <option value="">Selecione um jogador</option>
-            </select>
-            <input type="number" id="pontosVencedor" placeholder="Pontos" required class="w-full p-2 rounded-lg bg-black/30 border border-emerald-500/30 focus:border-emerald-500">
-          </div>
+          <select id="vencedor1" required class="w-full p-2 rounded-lg bg-black/30 border border-emerald-500/30 focus:border-emerald-500 appearance-none">
+            <option value="">Selecione um jogador</option>
+          </select>
+          <select id="vencedor2" required class="w-full p-2 rounded-lg bg-black/30 border border-emerald-500/30 focus:border-emerald-500 appearance-none">
+            <option value="">Selecione um jogador</option>
+          </select>
+          <input type="number" id="pontosVencedor" placeholder="Pontos" required class="w-full p-2 rounded-lg bg-black/30 border border-emerald-500/30 focus:border-emerald-500">
         </div>
         <div class="pt-4">
           <label class="block text-sm text-emerald-300 mb-2">Time Perdedor</label>
-          <div class="space-y-2">
-            <select id="perdedor1" required class="w-full p-2 rounded-lg bg-black/30 border border-emerald-500/30 focus:border-emerald-500 appearance-none">
-              <option value="">Selecione um jogador</option>
-            </select>
-            <select id="perdedor2" required class="w-full p-2 rounded-lg bg-black/30 border border-emerald-500/30 focus:border-emerald-500 appearance-none">
-              <option value="">Selecione um jogador</option>
-            </select>
-            <input type="number" id="pontosPerdedor" placeholder="Pontos" required class="w-full p-2 rounded-lg bg-black/30 border border-emerald-500/30 focus:border-emerald-500">
-          </div>
+          <select id="perdedor1" required class="w-full p-2 rounded-lg bg-black/30 border border-emerald-500/30 focus:border-emerald-500 appearance-none">
+            <option value="">Selecione um jogador</option>
+          </select>
+          <select id="perdedor2" required class="w-full p-2 rounded-lg bg-black/30 border border-emerald-500/30 focus:border-emerald-500 appearance-none">
+            <option value="">Selecione um jogador</option>
+          </select>
+          <input type="number" id="pontosPerdedor" placeholder="Pontos" required class="w-full p-2 rounded-lg bg-black/30 border border-emerald-500/30 focus:border-emerald-500">
         </div>
         <button type="submit" class="w-full bg-emerald-600 hover:bg-emerald-700 py-2 rounded-xl font-medium transition-all mt-6">🚀 Registrar Partida</button>
       </form>
     </div>
   </div>
-
-  <!-- Overlay Mobile -->
   <div id="sidebarOverlay" class="fixed inset-0 bg-black/50 z-40 hidden lg:hidden" onclick="toggleSidebar()"></div>
-
-  <!-- Toggle Sidebar Button Mobile -->
   <button class="fixed bottom-6 right-6 lg:hidden z-50 p-4 bg-emerald-600 hover:bg-emerald-700 rounded-full shadow-2xl transition-all" onclick="toggleSidebar()">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
     </svg>
   </button>
 
-  <!-- Modal Cadastro Jogador -->
+  <!-- Modal Novo Jogador -->
   <div id="modalJogador" class="fixed inset-0 bg-black/50 z-50 hidden items-center justify-center p-4">
     <div class="cyber-border rounded-2xl w-full max-w-md p-6">
       <div class="flex justify-between items-center mb-6">
@@ -102,7 +86,7 @@
     </div>
   </div>
 
-  <!-- Main Content -->
+  <!-- Conteúdo Principal -->
   <div class="lg:ml-80 transition-all duration-300">
     <div class="absolute inset-0 z-0 opacity-20">
       <div class="absolute w-[500px] h-[500px] bg-emerald-500/10 -top-64 -left-64 rounded-full blur-3xl"></div>
@@ -120,7 +104,8 @@
             <input type="text" id="search" placeholder="Buscar jogador..." class="w-full p-3 rounded-xl bg-black/30 backdrop-blur-sm border border-emerald-500/30 focus:border-emerald-500 focus:ring-2 focus:ring-emerald-500/50 transition-all"/>
             <div class="absolute right-3 top-3 text-emerald-500">
               <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
               </svg>
             </div>
           </div>
@@ -132,7 +117,8 @@
             </div>
             <button onclick="carregarDados()" class="bg-gradient-to-r from-emerald-600 to-green-700 hover:from-emerald-500 hover:to-green-600 px-6 py-2.5 rounded-xl font-medium transition-all flex items-center gap-2 group">
               <svg class="w-5 h-5 group-hover:rotate-180 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"/>
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"/>
               </svg>
               Atualizar
             </button>
@@ -173,7 +159,7 @@
   </div>
 
   <script>
-    const API_URL = 'https://script.google.com/macros/s/AKfycbyxma5KDrv4Fsj3wEavT_pzDxCczR-saWw_vyBQh1dsspDnOtuHK0Br4E9jNzj7hkycrA/exec';
+    const API_URL = 'https://script.google.com/macros/s/AKfycbzkm5lQCiIiQ1tDgCjcv-bkNNB9jFpfxeUnDERdmZFPkP7ApOzux5Esp_vH3pujVfkFnw/exec';
 
     let jogadores = [];
     let grafico;
@@ -182,7 +168,6 @@
       document.querySelector('.sidebar').classList.toggle('visible');
       document.getElementById('sidebarOverlay').classList.toggle('hidden');
     }
-
     function toggleModal() {
       const modal = document.getElementById('modalJogador');
       modal.classList.toggle('hidden');
@@ -198,35 +183,34 @@
       return '🔰 Novato';
     };
 
-    const renderTabela = filtro => {
-      const tabela = document.getElementById('ranking-table');
-      tabela.innerHTML = '';
-
+    function renderTabela(filtro = '') {
+      const tbody = document.getElementById('ranking-table');
+      tbody.innerHTML = '';
       const filtrado = jogadores
-        .filter(j => j.nome.toLowerCase().includes((filtro || '').toLowerCase()))
+        .filter(j => j.nome.toLowerCase().includes(filtro.toLowerCase()))
         .sort((a, b) => b.vitorias - a.vitorias || b.diferenca - a.diferenca);
 
       filtrado.forEach(j => {
-        const taxa = j.partidas
-          ? `${Math.round((j.taxa || j.vitorias / j.partidas) * 100)}%`
+        const taxaPct = j.partidas
+          ? `${Math.round(j.taxa * 100)}%`
           : '0%';
         const rank = calcularRank(j.vitorias, j.taxa);
-        tabela.innerHTML += `
+        tbody.innerHTML += `
           <tr class="hover:bg-zinc-800 transition">
             <td class="px-4 py-3 text-left text-green-300 font-semibold">${j.nome}</td>
             <td class="px-4 py-3">${j.vitorias}</td>
             <td class="px-4 py-3">${j.derrotas}</td>
             <td class="px-4 py-3">${j.partidas}</td>
-            <td class="px-4 py-3">${taxa}</td>
+            <td class="px-4 py-3">${taxaPct}</td>
             <td class="px-4 py-3">${j.diferenca}</td>
             <td class="px-4 py-3 text-emerald-400 font-bold">${rank}</td>
           </tr>`;
       });
 
       renderGrafico(filtrado);
-    };
+    }
 
-    const renderGrafico = data => {
+    function renderGrafico(data) {
       const ctx = document.getElementById('graficoRanking').getContext('2d');
       if (grafico) grafico.destroy();
       grafico = new Chart(ctx, {
@@ -247,102 +231,126 @@
           plugins: { legend: { labels: { color: '#fff' } } }
         }
       });
-    };
+    }
 
-    const atualizarSelects = () => {
-      document.querySelectorAll('select[id^="vencedor"], select[id^="perdedor"]').forEach(select => {
-        select.options.length = 1;
+    function atualizarSelects() {
+      document.querySelectorAll('select[id^="vencedor"], select[id^="perdedor"]').forEach(sel => {
+        sel.options.length = 1;
         jogadores.forEach(j => {
-          const opt = document.createElement('option');
-          opt.value = j.nome;
-          opt.textContent = j.nome;
-          select.appendChild(opt);
+          const o = document.createElement('option');
+          o.value = j.nome;
+          o.textContent = j.nome;
+          sel.appendChild(o);
         });
       });
-    };
+    }
 
-    const carregarDados = async () => {
+    async function carregarDados() {
       try {
-        const res = await fetch(API_URL, { method: 'GET', mode: 'cors' });
-        if (!res.ok) throw new Error(`Status ${res.status}`);
+        const res  = await fetch(API_URL, { method: 'GET', mode: 'cors' });
         const json = await res.json();
         if (!json.data) throw new Error('Formato inválido');
-        jogadores = json.data.filter(j => j.nome);
+        // Normaliza tipos e calcula taxa
+        jogadores = json.data.map(j => ({
+          ...j,
+          vitorias:  Number(j.vitorias),
+          derrotas:  Number(j.derrotas),
+          partidas:  Number(j.partidas),
+          diferenca: Number(j.diferenca),
+          taxa:      j.partidas ? (Number(j.vitorias) / Number(j.partidas)) : 0
+        }));
         renderTabela();
         atualizarSelects();
       } catch (e) {
         console.error(e);
         alert(`Erro ao carregar dados: ${e.message}`);
       }
-    };
+    }
 
     document.getElementById('formJogador').addEventListener('submit', async e => {
       e.preventDefault();
-      const jogador = {
-        nome: document.getElementById('nomeCompleto').value,
+      const body = {
+        action:  'cadastro',
+        nome:    document.getElementById('nomeCompleto').value,
         apelido: document.getElementById('apelido').value
       };
       try {
-        const res = await fetch(API_URL, {
+        const res  = await fetch(API_URL, {
           method: 'POST',
           mode: 'cors',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(jogador)
+          body: JSON.stringify(body)
         });
         const json = await res.json();
-        if (!res.ok) throw new Error(json.message || 'Erro');
-        alert('Jogador cadastrado com sucesso!');
+        if (!res.ok) throw new Error(json.message);
+        alert(json.message);
         toggleModal();
         e.target.reset();
         await carregarDados();
-      } catch (e) {
-        console.error(e);
-        alert(`Erro ao cadastrar: ${e.message}`);
+      } catch (err) {
+        console.error(err);
+        alert(`Erro ao cadastrar: ${err.message}`);
       }
     });
 
     document.getElementById('formPartida').addEventListener('submit', async e => {
       e.preventDefault();
-      const partida = {
-        vencedores: [document.getElementById('vencedor1').value, document.getElementById('vencedor2').value],
-        perdedores:  [document.getElementById('perdedor1').value, document.getElementById('perdedor2').value],
-        pontosVencedor:  document.getElementById('pontosVencedor').value,
-        pontosPerdedor:  document.getElementById('pontosPerdedor').value
+      const vencedores = [
+        document.getElementById('vencedor1').value,
+        document.getElementById('vencedor2').value
+      ];
+      const perdedores  = [
+        document.getElementById('perdedor1').value,
+        document.getElementById('perdedor2').value
+      ];
+      const body = {
+        action:         'partida',
+        vencedores,
+        perdedores,
+        pontosVencedor: document.getElementById('pontosVencedor').value,
+        pontosPerdedor: document.getElementById('pontosPerdedor').value
       };
-      if (Object.values(partida).some(v => !v || (Array.isArray(v) && v.includes('')))) {
-        alert('Preencha todos os campos!');
-        return;
+      if ([...vencedores, ...perdedores].some(v => !v.trim()) ||
+          !body.pontosVencedor || !body.pontosPerdedor) {
+        return alert('Preencha todos os campos!');
       }
       try {
-        const res = await fetch(API_URL, {
+        const res  = await fetch(API_URL, {
           method: 'POST',
           mode: 'cors',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(partida)
+          body: JSON.stringify(body)
         });
         const json = await res.json();
-        if (!res.ok) throw new Error(json.message || 'Erro');
+        if (!res.ok) throw new Error(json.message);
         alert(json.message);
         e.target.reset();
         await carregarDados();
-      } catch (e) {
-        console.error(e);
-        alert(`Erro ao registrar partida: ${e.message}`);
+      } catch (err) {
+        console.error(err);
+        alert(`Erro ao registrar partida: ${err.message}`);
       }
     });
 
-    document.getElementById('search').addEventListener('input', e => renderTabela(e.target.value));
+    document.getElementById('search').addEventListener('input', e =>
+      renderTabela(e.target.value)
+    );
 
-    const dataHoje = () => {
+    // Data de hoje formatada
+    document.getElementById('dataAtual').innerText = (() => {
       const hoje = new Date();
-      const dia = hoje.getDay();
-      if (dia === 0 || dia === 6) return 'Fora do horário (Sábado/Domingo)';
+      const diaSemana = hoje.getDay();  // 0=domingo,6=sábado
+      if (diaSemana === 0 || diaSemana === 6) {
+        return 'Fora do horário (Sábado/Domingo)';
+      }
       return hoje.toLocaleDateString('pt-BR', {
         weekday: 'long', day: '2-digit', month: 'short', year: 'numeric'
       });
-    };
-    document.getElementById('dataAtual').innerText = dataHoje();
+    })();
+
+    // Carrega ao iniciar
     document.addEventListener('DOMContentLoaded', carregarDados);
   </script>
+
 </body>
 </html>
